Версія на перевірку 1.1
Додана заборона скролінгу при відкритому модальному вікні.

--- a/css/styles.css
+++ b/css/styles.css
@@ -850,3 +850,13 @@ svg {
   min-width: 18px;
   height: 18px;
 }
+
+/*
+  |==============================
+  | Запрет скролла при вызове модальной формы
+  |==============================
+*/
+
+.no-scroll {
+  overflow: hidden;
+}
